--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <title>React App</title>
+      name="Chatter"
+      content="A simple website with basic social functions"/>
+    <title>Chatter</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
